# Simple-Gallery

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  keystore.properties_sample  settings.gradle  settings.gradle.kts  signing.properties_sample
libraw/src/main/cpp/LibRaw/: .clang-format  Changelog.txt  LibRaw.pro  LibRaw.sln  Makefile  Makefile.am  Makefile.devel  Makefile.devel.nopp  Makefile.devel.noppr2i  Makefile.dist  Makefile.in  Makefile.mingw  Makefile.msvc  aclocal.m4  clist2c.pl  clist2html.pl  config.status  configure  configure.ac  export-dist.sh  libraw.pc  libraw.pc.in  libraw_r.pc  libraw_r.pc.in  libtool  mkdist.sh  rsxml2c.sh  shlib-version.sh  version.sh
libraw/src/main/cpp/LibRaw/GoPro/: dng-sdk-1_6-hide-ccVc5-definitiion.diff  dng-sdk-allow-VC5-validate.diff  gpr_read_image.cpp.diff  gpr_read_image.h.diff
libraw/src/main/cpp/LibRaw/RawSpeed/: rawspeed.cpucount-unix.patch  rawspeed.qmake-pro-files.patch  rawspeed.samsung-decoder.patch  rawspeed.uncompressed-color-dng.patch  rawspeed.win32-dll.patch  rawspeed_xmldata.cpp
libraw/src/main/cpp/LibRaw/RawSpeed3/: README.md
libraw/src/main/cpp/LibRaw/RawSpeed3/patches/: 01.CameraMeta-extensibility.patch  02.Makernotes-processing.patch  03.remove-limits-and-logging.patch  04.clang-cl-compatibility.patch
libraw/src/main/cpp/LibRaw/RawSpeed3/rawspeed3_c_api/: rawspeed3_capi.cpp  rawspeed3_capi.h  rawspeed3_capi_test.cpp  rsxml2c.sh
libraw/src/main/cpp/LibRaw/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
libraw/src/main/cpp/LibRaw/buildfiles/: 4channels.pro  4channels.vcxproj  4channels.vcxproj.filters  dcraw_emu.pro  dcraw_emu.vcxproj  dcraw_emu.vcxproj.filters  dcraw_half.pro  dcraw_half.vcxproj  dcraw_half.vcxproj.filters  half_mt.pro  libraw-common-lib.pro  libraw-common.pro  libraw.pro  libraw.vcxproj  libraw.vcxproj.filters  mem_image.pro  mem_image.vcxproj  mem_image.vcxproj.filters  multirender_test.pro  multirender_test.vcxproj  multirender_test.vcxproj.filters  openbayer_sample.pro  openbayer_sample.vcxproj  openbayer_sample.vcxproj.filters  postprocessing_benchmark.pro  postprocessing_benchmark.vcxproj  postprocessing_benchmark.vcxproj.filters  raw-identify.pro  raw-identify.vcxproj  raw-identify.vcxproj.filters  rawtextdump.pro  rawtextdump.vcxproj  rawtextdump.vcxproj.filters  simple_dcraw.pro  simple_dcraw.vcxproj  simple_dcraw.vcxproj.filters  unprocessed_raw.pro  unprocessed_raw.vcxproj  unprocessed_raw.vcxproj.filters
libraw/src/main/cpp/LibRaw/dcraw/: dcraw.c
libraw/src/main/cpp/LibRaw/doc/: API-C.html  API-CXX.html  API-datastruct.html  API-notes.html  API-overview.html  Install-LibRaw.html  Samples-LibRaw.html  Why-LibRaw.html  index.html
libraw/src/main/cpp/LibRaw/lib/: Makefile  libraw.la  libraw_r.la
libraw/src/main/cpp/LibRaw/lib/.libs/: libraw.23.dylib  libraw.dylib  libraw.la  libraw.lai  libraw_r.23.dylib  libraw_r.dylib  libraw_r.la  libraw_r.lai
libraw/src/main/cpp/LibRaw/m4/: ax_openmp.m4
libraw/src/main/cpp/LibRaw/samples/: 4channels.cpp  Makefile  dcraw_emu.cpp  dcraw_half.c  half_mt.c  half_mt_win32.c  mem_image_sample.cpp  multirender_test.cpp  openbayer_sample.cpp  postprocessing_benchmark.cpp  raw-identify.cpp  rawtextdump.cpp  simple_dcraw.cpp  unprocessed_raw.cpp
libraw/src/main/cpp/LibRaw/samples/.deps/: bin_4channels-4channels.Po  bin_dcraw_emu-dcraw_emu.Po  bin_dcraw_half-dcraw_half.Po  bin_half_mt-half_mt.Po  bin_mem_image-mem_image_sample.Po  bin_multirender_test-multirender_test.Po  bin_postprocessing_benchmark-postprocessing_benchmark.Po  bin_raw_identify-raw-identify.Po  bin_rawtextdump-rawtextdump.Po  bin_simple_dcraw-simple_dcraw.Po  bin_unprocessed_raw-unprocessed_raw.Po
libraw/src/main/cpp/LibRaw/src/: Makefile  libraw_c_api.lo  libraw_datastream.cpp  libraw_datastream.lo
libraw/src/main/cpp/LibRaw/src/.deps/: libraw_c_api.Plo  libraw_datastream.Plo
libraw/src/main/cpp/LibRaw/src/decoders/: canon_600.lo  crx.lo  decoders_dcraw.cpp  decoders_dcraw.lo  decoders_libraw.lo  decoders_libraw_dcrdefs.lo  dng.lo  fp_dng.lo  fuji_compressed.lo  generic.lo  kodak_decoders.lo  load_mfbacks.lo  smal.lo  unpack.lo  unpack_thumb.cpp  unpack_thumb.lo
libraw/src/main/cpp/LibRaw/src/decoders/.deps/: canon_600.Plo  crx.Plo  decoders_dcraw.Plo  decoders_libraw.Plo  decoders_libraw_dcrdefs.Plo  dng.Plo  fp_dng.Plo  fuji_compressed.Plo  generic.Plo  kodak_decoders.Plo  load_mfbacks.Plo  smal.Plo  unpack.Plo  unpack_thumb.Plo
libraw/src/main/cpp/LibRaw/src/demosaic/: aahd_demosaic.lo  ahd_demosaic.lo  dcb_demosaic.lo  dht_demosaic.lo  misc_demosaic.lo  xtrans_demosaic.lo
libraw/src/main/cpp/LibRaw/src/demosaic/.deps/: aahd_demosaic.Plo  ahd_demosaic.Plo  dcb_demosaic.Plo  dht_demosaic.Plo  misc_demosaic.Plo  (+1 more)
libraw/src/main/cpp/LibRaw/src/integration/: dngsdk_glue.lo  rawspeed_glue.lo
libraw/src/main/cpp/LibRaw/src/metadata/: adobepano.lo  canon.lo  ciff.lo  cr3_parser.lo  epson.lo  exif_gps.lo  fuji.cpp  fuji.lo  hasselblad_model.lo  identify.lo  identify_tools.lo  kodak.lo  leica.lo  makernotes.lo  mediumformat.lo  minolta.lo  misc_parsers.lo  nikon.lo  normalize_model.lo  olympus.lo  p1.lo  pentax.lo  samsung.lo  sony.lo  tiff.lo
libraw/src/main/cpp/LibRaw/src/postprocessing/: aspect_ratio.lo  dcraw_process.lo  mem_image.lo  postprocessing_aux.lo  postprocessing_ph.cpp  postprocessing_utils.lo  postprocessing_utils_dcrdefs.lo
libraw/src/main/cpp/LibRaw/src/preprocessing/: ext_preprocess.lo  preprocessing_ph.cpp  raw2image.cpp  raw2image.lo  subtract_black.lo
libraw/src/main/cpp/LibRaw/src/tables/: cameralist.lo  colorconst.lo  colordata.lo  wblists.lo
libraw/src/main/cpp/LibRaw/src/utils/: curves.lo  decoder_info.lo  init_close_utils.lo  open.cpp  open.lo  phaseone_processing.lo  read_utils.lo  thumb_utils.lo  utils_dcraw.lo  utils_libraw.lo
libraw/src/main/cpp/LibRaw/src/write/: apply_profile.lo  file_write.lo  tiff_writer.lo  write_ph.cpp
libraw/src/main/cpp/LibRaw/src/x3f/: x3f_parse_process.lo  x3f_utils_patched.lo
(+1697 files in other folders)
